Improve handling of ExceptionUtility#sendExceptionally